--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CalculadoraVuelo"
-        tools:targetApi="31">
+        tools:targetApi="21">
+        <activity
+            android:name=".VencimientoCabActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Help"
+            android:exported="false" />
         <activity
             android:name=".CalculoActivity"
             android:exported="false" />
